--- a/MapViewer.Emulation.Msul/Views/MsulEmulationParametersView.xaml
+++ b/MapViewer.Emulation.Msul/Views/MsulEmulationParametersView.xaml
@@ -13,7 +13,8 @@
         <DataTemplate DataType="{x:Type viewModels:CarriageParametersViewModel}">
             <Grid Margin="1" Height="20">
                 <controls:Carriage Position="{Binding Position}" Fill="White" Stroke="DimGray" StrokeThickness="1" />
-                <TextBlock Text="{Binding Number}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="9" Opacity="0.7" />
+                <TextBlock Text="{Binding Number}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="9"
+                           Opacity="0.7" />
             </Grid>
         </DataTemplate>
 
@@ -56,7 +57,7 @@
             <ColumnDefinition Width="60" />
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+        <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="0, 6">
             <ItemsControl ItemsSource="{Binding Carriages}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -64,7 +65,12 @@
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
             </ItemsControl>
-        </Grid>
+            <DockPanel>
+                <RadioButton DockPanel.Dock="Left" VerticalAlignment="Center" Margin="10,0" IsChecked="{Binding IsLeftSectionActive}" />
+                <RadioButton DockPanel.Dock="Right" VerticalAlignment="Center" Margin="10,0" IsChecked="{Binding IsRightSectionActive}" />
+                <TextBlock Text="Ведущая секция" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0" />
+            </DockPanel>
+        </StackPanel>
 
         <HeaderedContentControl Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Header="Номер поезда">
             <TextBox Text="{Binding TrainNumber}" />
