--- a/MapViewer.Emulation.Msul/Views/MsulEmulationParametersView.xaml
+++ b/MapViewer.Emulation.Msul/Views/MsulEmulationParametersView.xaml
@@ -50,6 +50,7 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition Height="12" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -57,7 +58,7 @@
             <ColumnDefinition Width="60" />
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="0, 6">
+        <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="0, 10">
             <ItemsControl ItemsSource="{Binding Carriages}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -72,10 +73,9 @@
             </DockPanel>
         </StackPanel>
 
-        <HeaderedContentControl Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Header="Номер поезда">
-            <TextBox Text="{Binding TrainNumber}" />
-        </HeaderedContentControl>
-
+        <TextBlock Grid.Row="1" Grid.Column="0" Text="Номер поезда" />
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding TrainNumber}" />
+        
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Температура воздуха" />
         <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding OutdoorTemperature}" />
 
@@ -107,7 +107,7 @@
         <ToggleButton Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"
                       Content="Освещение" IsChecked="{Binding LightOn}" />
 
-        <ItemsControl Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
+        <ItemsControl Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2"
                       ItemsSource="{Binding Carriages}">
             <ItemsControl.Resources>
                 <DataTemplate DataType="{x:Type viewModels:CarriageParametersViewModel}">
