Возможность установить дескриптор, под которым высылаются координаты

--- a/MapViewer.Emulation.Blok/Views/BlokEmulationView.xaml
+++ b/MapViewer.Emulation.Blok/Views/BlokEmulationView.xaml
@@ -8,11 +8,29 @@
     <Grid>
         <GroupBox Header="Эмуляция БЛОК" Padding="4">
             <StackPanel>
-                <TextBlock Text="Эмулировать сообщения ЭК-СНС" TextWrapping="Wrap" />
                 <CheckBox Content="Достоверность" IsChecked="{Binding Reliability}" Margin="2" />
                 <ComboBox Margin="2" IsEnabled="{Binding CanChangeEmissionMethod}"
                           ItemsSource="{Binding EmitterFactories}" DisplayMemberPath="Name"
                           SelectedItem="{Binding SelectedEmitterFactory}" />
+                <TextBlock Margin="2" Text="Дескриптор:" />
+                <ComboBox Margin="2" IsEnabled="{Binding CanChangeDescriptor}"
+                          ItemsSource="{Binding EmissionDescriptors}"
+                          SelectedItem="{Binding SelectedDescriptor}"
+                          HorizontalContentAlignment="Stretch">
+                    <ComboBox.ItemContainerStyle>
+                        <Style TargetType="ContentControl">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        </Style>
+                    </ComboBox.ItemContainerStyle>
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate DataType="{x:Type viewModels:EmissionDescriptorViewModel}">
+                            <DockPanel>
+                                <TextBlock DockPanel.Dock="Right" Text="{Binding Path=Descriptor, StringFormat=X4}" Opacity="0.6" />
+                                <TextBlock Text="{Binding Name}" />
+                            </DockPanel>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
