--- a/MapViewer.Emulation/Views/NavigationControlView.xaml
+++ b/MapViewer.Emulation/Views/NavigationControlView.xaml
@@ -1,14 +1,15 @@
-﻿<UserControl x:Class="MapViewer.Emulation.Views.SpeedControlView"
+﻿<UserControl x:Class="MapViewer.Emulation.Views.NavigationControlView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:MapViewer.Emulation.ViewModels"
-             mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="300" d:DataContext="{d:DesignInstance viewModels:SpeedControlViewModel}">
+             mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="300" d:DataContext="{d:DesignInstance viewModels:NavigationControlViewModel}">
     <Grid>
-        <Border Background="#70ffffff" Padding="3,1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10"
+        <Border Background="#70ffffff" Padding="3,1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,28,0,0"
                 d:DataContext="{d:DesignData viewModels:WheelViewModel}">
             <StackPanel>
+                <CheckBox Content="Достоверность" IsChecked="{Binding Reliability}" Margin="2" />
                 <TextBlock>
                     Скорость: <Run Text="{Binding Speed, StringFormat={}{0:F1}, Mode=OneWay}" />км/ч
                 </TextBlock>
